<package>
  <name>parsimonious</name>
  <version>0.8.1</version>
  <description>
    This package contains parsimonious.
  </description>
  <author email="todo@todo.todo">TODO</author>
  <maintainer email="todo@todo.todo">TODO</maintainer>

  <license>GNU v.2</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
